# aksha

./: .gitignore  AKSHA_SPEC.md  README.md  pyproject.toml  pytest.ini
aksha/: __init__.py  _compat.py  cli.py  config.py  databases.py  jackhmmer.py  nhmmer.py  parsers.py  phmmer.py  results.py  scan.py  search.py  thresholds.py  types.py
aksha/data/: databases.json
dummy_dataset/: Burkholderiales_bacterium_RIFCSPHIGHO2_01_FULL_64_960.contigs.faa  Candidatus_Muproteobacteria_bacterium_RIFCSPHIGHO2_01_FULL_61_200.contigs.faa  Candidatus_Nomurabacteria_bacterium_RIFCSPLOWO2_01_FULL_41_220.contigs.faa  PLM0_60_b1_sep16_Maxbin2_047_curated.contigs.faa
dummy_genomes/: Candidatus_Muproteobacteria_bacterium_RIFCSPHIGHO2_01_FULL_61_200.contigs.fna  Candidatus_Nomurabacteria_bacterium_RIFCSPLOWO2_01_FULL_41_220.contigs.fna  PLM0_60_b1_sep16_Maxbin2_047_curated.contigs.fna
scripts/: bench_mem.py  run_full_api_suite.py  run_pfam_checks.py  run_tests.py
tests/: conftest.py  test_barrnap.py  test_cli.py  test_edge_cases.py  test_plots.py  test_results.py  test_search.py  test_thresholds.py  test_workflows.py
tests/fixtures/: cutoff_ga.hmm  rrna_16S.fa  small.faa  small.fna  small.hmm  small_nuc.hmm
