[project]
name = "aksha"
version = "0.1.0"
description = "Scalable HMM-based sequence search and retrieval"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jacob West-Roberts" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pyhmmer>=0.10.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "requests>=2.28.0",
    "platformdirs>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "matplotlib>=3.7.0",
]

[project.scripts]
aksha = "aksha.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aksha"]
include = [
    "aksha/data/databases.json",
    "aksha/py.typed",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py310"
